<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/setting_bg_img"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"/>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="32dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/txtLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/white"
                android:textSize="16dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <TextView
                    android:id="@+id/txtLoginSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>
            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="32dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/txtSyncTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="동기화"
                android:textColor="@color/white"
                android:textSize="16dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <Switch
                    android:id="@+id/schSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="32dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/txtVersionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="버전"
                android:textColor="@color/white"
                android:textSize="16dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <TextView
                    android:id="@+id/txtVersionSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>
            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/container"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="32dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/txtAboutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="16dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <TextView
                    android:id="@+id/txtAboutSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/momu"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>
            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/btn_lock_setting"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="32dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/txt_lock_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lock_setting"
                android:textColor="@color/white"
                android:textSize="16dp"/>

            <TextView
                android:id="@+id/txt_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/txt_lock_head"
                android:layout_marginRight="50dp"
                android:layout_marginTop="5dp"
                android:text="암호를 분실했을 경우 앱을 삭제하고 재설치 해야 하며, 재설치 시 기존 다이어리 내용은 삭제됩니다."
                android:textColor="@color/gray2"
                android:textSize="12sp"/>


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/btn_lock_change"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="32dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/txt_change_lock_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/lock_setting_change"
                android:textColor="@color/white"
                android:textSize="16dp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/line"/>
    </LinearLayout>
</LinearLayout>